cmd/kubetype-gen/testdata/test_input/negative/defaults/invalidgroupversion/type.go
package invalidgroupversion

// Test is for test
// +kubetype-gen
type Test struct {
	Field string
}
